# genai-gcp-workshop

./: .gitignore  README.md
chat/: README.md  app.py  pyproject.toml
chat/app_utils/: app_utils.py
gcp/: .terraform.lock.hcl  README.md  locals.tf  main.tf  terraform.tfstate.backup  variables.tf
gcp/resources/blog_posts/: 4 Feature Stores - explained and compared.docx  5 MLOps issues resulting in ineffective use of data.docx  AutoML with BigQuery ML.docx  MLOps@Snowflake blog post.docx  Running Kedro... everywhere - blogpost.docx  kedro-snowflake blog post.docx
labs/notebooks/: 2023_10_04_index_ingestion.ipynb  2023_10_04_question_answering_documents_langchain_matching_engine_connect.ipynb  question_answering_documents_langchain_matching_engine.ipynb
